# OxiFetch

./: .gitignore  Cargo.toml  README.md  image.toml
src/: main.rs
