[package]
name = "oxifetch"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.9"
sysinfo = "0.27.2" # CPU info is Slow
dark-light = "1.0.0"
libmacchina = "6.3.1"
crossterm = "0.25.0"
sys-locale = "0.2.3"
confy = "0.5.1"
serde = "1.0.152"
display-info = "0.3.2"
whoami = "1.3.0"
rust_search = "2.1.0"

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_System_Registry",
    "Win32_Foundation"
]

[profile.release]
#debug = true  # For flamegraph
strip = true  # Automatically strip symbols from the Linux binary
#opt-level = "z"  # Optimize for size
#opt-level = 3  # Optimize for speed
lto = true # Link-time optimizations
codegen-units = 1 # Stops codegen parallelization
panic = "abort" # Removes stack traces
